========================
   beancount: CHANGES
========================
Note: This file contains a list changes in the 'default' branch.


2019-03-03

  - Fixed #378: Rendering metadata with null values wasn't properly implemented.
    In the process, I explicit parsing of None values by allowing "NULL".

  - Fixed #309: Catch PermissionError to work around
    https://bugs.python.org/issue25481.


2019-02-27

  - Implemented a quick prototype of the current trading accounts method of
    Peter Selinger in 'beancount.plugins.currency_accounts'. A few warts remain:

    * FIXME: We need to handle these important cases (they're not frivolous,
      this is a prototype), probably by inserting some exceptions with
      collaborating code in the booking (e.g. insert some metadata that
      disables price conversions on those postings).

    * FIXME(2): Ouch! Some of the residual seeps through here, where there
      are more than a single currency block. This needs fixing too. You can
      easily mitigate some of this to some extent, by excluding transactions
      which don't have any price conversion in them.


2019-02-26

  - Fixed #376: Coerce implicit boolean to true boolean.


2019-02-10

  - Fixed #374: Option --all treatment was broken in #210. Also catch and print
    errors.

  - Fixed rare failure of shutil.rmtree() in encryption cleanup test.


2019-02-03

  - Fixed #372: Removed formatted string literal to keep compat with Python 3.5.


2019-01-29

  - Fixed #362: Predicate matching a parent account was matching accounts with
    word breaks but not at the boundary of an account name. This was causing
    a rare (but important) failure in how Pad balances were calculated.


2019-01-28

  - Released 2.2.1 for bug fixes.


2019-01-25

  - Improve output of tags and links for bean-report ledger and hledger.


2019-01-22

  - Fixed problem with invalid format strings with 0-width field when rendering
    MISSING.


2019-01-05

  - Merged pull request #85